--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,13 @@
     "titleBar.activeBackground": "#93e5c8",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#93e5c899",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "activityBar.activeBackground": "#bcefdd",
+    "activityBar.background": "#bcefdd",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#be7ee0",
+    "activityBarBadge.foreground": "#15202b"
   },
   "peacock.color": "#93e5c8"
 }
